changed <b></b> to <strong></strong>

--- a/week01/day 01/programming-language-museum.html.html
+++ b/week01/day 01/programming-language-museum.html.html
@@ -19,7 +19,7 @@
         <li><a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">CSS</a></li>
         <li><a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">Javascript</a></li>
     </ul>
-    <p>Find info about <b>browers</b> and their <b>companies</b> below.</p>
+    <p>Find info about <strong>browers</strong> and their <strong>companies</strong> below.</p>
 
     <table>
         <tr>
